<?xml version="1.0"?>
<package format="2">
  <name>human_distance</name>
  <version>0.0.0</version>
  <description>The human_distance package</description>

  <maintainer email="kamil@todo.todo">kamil</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>zed_nodelets</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>zed_nodelets</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>zed_nodelets</exec_depend>

  <export>

  </export>
</package>
